# igentai

./: .example.env  .gitignore  Cargo.toml  LICENSE  README.md  TECHNICAL_DOCUMENTATION.md  example.env  orchestrator_coordination_design.md  rustfmt.toml
debug/: debug_key.rs  test_openai_key.rs  test_websocket.html
notes/: backend_task.md  coding_standards.md  design.md  design_decisions.md  implementation_plan.md  implementation_timeline.mmd  orchestrator_design.md  producer_design.md  project_structure.md  project_structure_diagram.mmd  webserver_design.md
orchestrator/: Cargo.toml
orchestrator/src/: error.rs  lib.rs  main.rs  orchestrator.rs  orchestrator_impl.rs  state.rs  traits.rs
orchestrator/src/core/: mod.rs  optimizer.rs  performance.rs  state.rs  uniqueness.rs
orchestrator/src/optimization/: mod.rs  traits.rs  types.rs
orchestrator/src/optimization/strategies/: adaptive.rs  basic.rs  mod.rs
orchestrator/src/services/: api_keys.rs  communication.rs  communicator.rs  file_manager.rs  file_system.rs  ipc_communicator.rs  mod.rs  optimizer.rs  process_manager.rs  process_output_handler.rs
orchestrator/src/services/tests/: README.md  api_keys.rs  communication.rs  file_system.rs  mod.rs  process_management.rs
orchestrator/tests/: integration.rs  unit.rs
orchestrator/tests/common/: fixtures.rs  helpers.rs  mod.rs
producer/: Cargo.toml
producer/output/: cycle_performance.json  provider_performance.json
producer/output/test/: metadata.json  output.json  output.txt
producer/src/: error.rs  lib.rs  main.rs  producer_impl.rs  state.rs  traits.rs  types.rs
producer/src/core/: generator.rs  metrics.rs  mod.rs  processor.rs  producer.rs  prompt.rs  utils.rs
producer/src/services/: api_client.rs  communicator.rs  ipc_communicator.rs  mod.rs  performance_tracker.rs  provider_router.rs  response_processor.rs
producer/src/services/tests/: README.md  ipc_communicator.rs  mod.rs  performance_tracker.rs  provider_router.rs  response_processor.rs
producer/tests/: api_integration.rs  comprehensive_api_tests.rs  comprehensive_rate_limit_tests.rs  e2e_openai_test.rs  env_config_test.rs  fixtures.rs  helpers.rs  integration.rs  minimal_integration.rs  openai_integration_test.rs  random_provider.rs  routing_strategy_cmdline_test.rs  routing_strategy_config_test.rs  simple_routing_test.rs
producer/tests/fixtures/: api_responses.rs  message_factories.rs  mock_orchestrator.rs  mod.rs  producer_configs.rs  producers.rs
producer/tests/integration/: backoff_routing.rs  bloom_filter_e2e.rs  command_handling.rs  config_updates.rs  ipc_communication.rs  mod.rs  multi_producer.rs  orchestration_e2e.rs  seen_values_sync.rs
producer/tests/unit/: mod.rs  routing_strategy.rs
scripts/: build.sh  start.sh  stop.sh  test.sh  test_and_analyze.sh  test_debug_console.sh  test_trace_capture.sh  test_with_debug.sh  test_with_tracing.sh
shared/: Cargo.toml
shared/src/: errors.rs  lib.rs  logging.rs  types.rs
shared/src/messages/: config.rs  metrics.rs  mod.rs  process.rs  producer.rs  webserver.rs
shared/src/types/: mod.rs
tester/: Cargo.toml  README.md
tester/src/: lib.rs  main.rs
tester/src/config/: builder.rs  builder_extensions.rs  fault_tolerance.rs  mod.rs  orchestrator.rs
tester/src/runtime/: api_client.rs  cleanup.rs  collector.rs  constellation.rs  fault_injector.rs  fault_injector_stub.rs  mod.rs
tester/src/scenarios/: core.rs  edge.rs  mod.rs  web.rs
tester/src/testing/: assertions.rs  cross_component_assertions.rs  fault_tolerance_assertions.rs  mod.rs  output.rs  topic.rs
webserver/: Cargo.toml
webserver/src/: error.rs  lib.rs  main.rs  state.rs  traits.rs  types.rs  webserver_impl.rs
webserver/src/core/: analytics.rs  mod.rs  state.rs
webserver/src/services/: client_broadcaster.rs  client_registry.rs  file_manager.rs  ipc_communicator.rs  metrics_aggregator.rs  mod.rs  orchestrator_client.rs  static_server.rs  websocket_manager.rs
webserver/src/services/tests/: client_broadcaster.rs  client_registry.rs  file_manager.rs  fixtures.rs  helpers.rs  ipc_communicator.rs  metrics_aggregator.rs  mod.rs
webserver/src/web/: mod.rs
webserver/src/web/handlers/: api.rs  mod.rs  static_files.rs  websocket.rs
webserver/static/: app.css  app.js  index.html
webserver/tests/: fixtures.rs  helpers.rs  integration.rs  orchestrator_communication_test.rs  test_mode_test.rs  webserver_test.rs  websocket_integration_test.rs
