[workspace]
members = [
    "orchestrator",
    "producer", 
    "webserver",
    "shared"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["iGent AI"]

[workspace.dependencies]
# Common dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"

# Async trait
async-trait = "0.1"

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# WebSocket
tokio-tungstenite = "0.21"

# HTTP server
axum = "0.7"
tower = "0.4" 
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random numbers
rand = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# URL parsing
url = "2.5"

# Async utilities
futures-util = "0.3"

# Process management
nix = { version = "0.27", features = ["process"] }

# Environment file loading
dotenv = "0.15"

# Shared internal crate
shared = { path = "shared" }
