[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[lib]
name = "orchestrator"
path = "src/lib.rs"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
clap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenv.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mockall = "0.12"
growable-bloom-filter = "2.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"