[package]
name = "producer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "producer"
path = "src/main.rs"

[dependencies]
shared.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
rand.workspace = true
reqwest.workspace = true
async-trait = "0.1"
regex = "1.0"

# Bloom filter
bloom = "0.3"

# Testing dependencies  
mockall = "0.12"

[dev-dependencies]
tokio-test = "0.4"

