[package]
name = "producer"
version.workspace = true
edition = "2021"  # Will upgrade to 2024 when available

[[bin]]
name = "producer"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
regex = "1.0"
growable-bloom-filter = "2.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dotenvy = "0.15"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"