[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

# For bloom filter (optional, Phase 2)
bloom = { version = "0.3", optional = true }

[features]
bloom-filter = ["bloom"]