[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["sync"] }

# For bloom filter support in orchestrator
bloom = { version = "0.3", optional = true }
bincode = { version = "1.3", optional = true }

[features]
default = []
bloom-filter = ["bloom", "bincode"]