[package]
name = "webserver"
version.workspace = true
edition.workspace = true

[[bin]]
name = "webserver"
path = "src/main.rs"

[dependencies]
shared.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
axum = { workspace = true, features = ["ws"] }  
tower.workspace = true
tower-http.workspace = true
tokio-tungstenite.workspace = true
async-trait.workspace = true

# Additional dependencies for production web server
tracing.workspace = true
tracing-subscriber = "0.3"
url.workspace = true
futures-util.workspace = true

# Static file embedding
rust-embed = "8.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
mockall = "0.12"

[dev-dependencies]
tokio-test = "0.4"