[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "webserver"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
shared = { path = "../shared" }

# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# HTTP server
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# WebSocket support
tokio-tungstenite = "0.20"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
mockall = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"